add docker for deploying on windows 2016